Hotfix, fixed issue with order tracker css that clipped sidebar + added payment hyperlink to sidebar

--- a/website/static/css/orderstyles.css
+++ b/website/static/css/orderstyles.css
@@ -1,6 +1,3 @@
-*{
-    box-sizing: border-box;
-  }
   
   /* ---order Button Section------------ */
   .image-container {
